--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
 
         </div>
         <div class="middle-container">
+            <img class="image-container" src="/resources/images/middle container/vman stats.png" alt="Picture for main container">
+            <img class="image-container" src="/resources/images/middle container/vman stats.png" alt="Picture for main container">
+            <img class="image-container" src="/resources/images/middle container/vman stats.png" alt="Picture for main container">
+            <img class="image-container" src="/resources/images/middle container/vman stats.png" alt="Picture for main container">
+            <img class="image-container" src="/resources/images/middle container/vman stats.png" alt="Picture for main container">
+            <img class="image-container" src="/resources/images/middle container/vman stats.png" alt="Picture for main container">
+            <img class="image-container" src="/resources/images/middle container/vman stats.png" alt="Picture for main container">
+            <img class="image-container" src="/resources/images/middle container/vman stats.png" alt="Picture for main container">
+
+            <input class="add-photo" type="image" src="/resources/images/middle container/plus sign.png" name="Add picture">
     
         </div>
         <div class="right-container">
