--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
     <link href="./resources/css/stylesheet.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-    <header>Header</header>
+    <header>
+        <form action="index.php" method ="POST">
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username">
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password">
+            <input type="submit" value="Submit">
+        </form>
+    </header>
     <div id="main">
       <middle>
 
